--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="api.js"></script>
     <title>Assignment 1</title>
 </head>
 <body>
-<div id="api"></div>
+    <div class="user">
+     
+    </div>
+    <div class="posts">
+
+    </div>
+
 </body>
-<script src="api.js"></script>
 </html>
